[trunk] Merged from branches/3.5

--- a/examples/demo-02.html
+++ b/examples/demo-02.html
@@ -1,34 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content2',
-		resizeMode : 1,
-        cssPath : './index.css',
-        items : [
-        'fontname', 'fontsize', '|', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
-        'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
-        'insertunorderedlist', '|', 'emoticons', 'image', 'link']
-    });
-  </script>
-</head>
-<body>
-  <h3>简单模式</h3>
-  <div class="editor">
-    <textarea id="content2" name="content" style="width:500px;height:200px;visibility:hidden;"></textarea>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content2',
+				resizeMode : 1,
+				allowPreviewEmoticons : false,
+				allowUpload : false,
+				items : [
+				'fontname', 'fontsize', '|', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
+				'removeformat', '|', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
+				'insertunorderedlist', '|', 'emoticons', 'image', 'link']
+			});
+		</script>
+	</head>
+	<body>
+		<h3>简单模式</h3>
+		<textarea id="content2" name="content" style="width:500px;height:200px;visibility:hidden;"></textarea>
+	</body>
 </html>
