--- a/examples/demo-03.html
+++ b/examples/demo-03.html
@@ -1,44 +1,36 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.init({
-        id : 'content3',
-        cssPath : './index.css',
-		afterCreate : function(id) {
-			KE.util.focus(id);
-		}
-    });
-    function createEditor(id) {
-        KE.create(id);
-    }
-    function removeEditor(id) {
-        KE.util.setData(id);
-        KE.remove(id);
-        KE.$(id).focus();
-    }
-  </script>
-</head>
-<body>
-  <h3>手动加载编辑器</h3>
-  <form name="example" method="post">
-    <div class="editor">
-      <textarea id="content3" name="content1" style="width:700px;height:300px;"></textarea>
-    </div>
-    <input type="button" name="button" value="加载编辑器" onclick="javascript:createEditor('content3');" />
-    <input type="button" name="button" value="卸载编辑器" onclick="javascript:removeEditor('content3');" />
-  </form>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.init({
+				id : 'content3',
+				afterCreate : function(id) {
+					KE.util.focus(id);
+				}
+			});
+			function createEditor(id) {
+				KE.create(id);
+			}
+			function removeEditor(id) {
+				KE.util.setData(id);
+				KE.remove(id);
+				KE.$(id).focus();
+			}
+		</script>
+	</head>
+	<body>
+		<h3>手动加载编辑器</h3>
+		<textarea id="content3" name="content1" style="width:700px;height:300px;"></textarea>
+		<br />
+		<input type="button" name="button" value="加载编辑器" onclick="javascript:createEditor('content3');" />
+		<input type="button" name="button" value="卸载编辑器" onclick="javascript:removeEditor('content3');" />
+	</body>
 </html>
