--- a/examples/demo-07.html
+++ b/examples/demo-07.html
@@ -1,35 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-    div.relative {
-    position:relative;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content7',
-        cssPath : './index.css',
-        allowFileManager : true
-    });
-  </script>
-</head>
-<body>
-  <h3>插入图片时允许浏览服务器</h3>
-  <div class="relative">
-    <div class="editor">
-      <textarea id="content7" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
-    </div>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+		KE.show({
+			id : 'content7',
+			allowFileManager : true
+		});
+		</script>
+	</head>
+	<body>
+		<h3>插入图片时允许浏览服务器</h3>
+		<textarea id="content7" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
+	</body>
 </html>
