--- a/examples/index.html
+++ b/examples/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta charset="utf-8" />
 		<title>KindEditor</title>
-		<style type="text/css" rel="stylesheet">
+		<style>
 			body {
 				font-size: 12px;
 				font-family: Courier New;
@@ -24,7 +24,7 @@
 			<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止拖动改变大小)</li>
 			<li><a href="./demo-07.html" target="_blank">demo-07.html</a> (插入图片时允许浏览服务器)</li>
 			<li><a href="./demo-08.html" target="_blank">demo-08.html</a> (回车换行设置)</li>
-			<li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
+			<li><a href="./demo-09.html" target="_blank">demo-09.html</a> (最佳性能模式)</li>
 			<li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
 			<li><a href="./demo-11.html" target="_blank">demo-11.html</a> (统计字数)</li>
 			<li><a href="./demo-12.html" target="_blank">demo-12.html</a> (JavaScript动态创建编辑器)</li>
