--- a/plugins/media.html
+++ b/plugins/media.html
@@ -1,75 +1,76 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Media</title>
-  <style type="text/css" rel="stylesheet">
-	body {
-		font-size:12px;
-		font-family: "sans serif",tahoma,verdana,helvetica;
-		margin:0;
-		background-color:#F0F0EE;
-		overflow:hidden;
-	}
-	label {
-		cursor:pointer;
-	}
-	.main {
-		margin: 10px;
-	}
-	.table  {
-		list-style-image:none;
-		list-style-position:outside;
-		list-style-type:none;
-		margin:0;
-		padding:0;
-		display:block;
-	}
-	.table li {
-		padding:0;
-		margin-bottom:10px;
-		display:list-item;
-		line-height:1.5;
-	}
-	.table li label {
-		font-weight:bold;
-	}
-	.table li input {
-		vertical-align:middle;
-	}
-	.table li img {
-		vertical-align:middle;
-	}
-  </style>
-  <script type="text/javascript">
-	var KE = parent.KE;
-	location.href.match(/\?id=([\w-]+)/i);
-	var id = RegExp.$1;
-	KE.event.ready(function() {
-		KE.util.hideLoadingPage(id);
-	}, window, document);
-  </script>
-</head>
-<body>
-	<div class="main">
-		<ul class="table">
-			<li>
-				<label for="url">媒体文件地址</label>
-				<input type="text" id="url" name="url" value="http://" maxlength="255" style="width:90%;" />
-			</li>
-			<li>
-				<label for="width">宽度</label>
-				<input type="text" id="width" name="width" value="550" maxlength="4" style="width:50px;text-align:right;" /> px
-			</li>
-			<li>
-				<label for="height">高度</label>
-				<input type="text" id="height" name="height" value="400" maxlength="4" style="width:50px;text-align:right;" /> px
-			</li>
-			<li>
-				<label for="autostart">自动播放</label>
-				<input type="checkbox" id="autostart" name="autostart" value="1" />
-			</li>
-		</ul>
-	</div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>Media</title>
+		<style type="text/css" rel="stylesheet">
+			body {
+				font-size:12px;
+				font-family: "sans serif",tahoma,verdana,helvetica;
+				margin:0;
+				background-color:#F0F0EE;
+				overflow:hidden;
+			}
+			label {
+				cursor:pointer;
+			}
+			.main {
+				margin: 10px;
+			}
+			.table  {
+				list-style-image:none;
+				list-style-position:outside;
+				list-style-type:none;
+				margin:0;
+				padding:0;
+				display:block;
+			}
+			.table li {
+				padding:0;
+				margin-bottom:10px;
+				display:list-item;
+				line-height:1.5;
+			}
+			.table li label {
+				font-weight:bold;
+			}
+			.table li input {
+				vertical-align:middle;
+			}
+			.table li img {
+				vertical-align:middle;
+			}
+		</style>
+		<script type="text/javascript">
+			var KE = parent.KindEditor;
+			location.href.match(/\?id=([\w-]+)/i);
+			var id = RegExp.$1;
+			KE.event.ready(function() {
+				KE.util.pluginLang('media', document);
+				KE.util.hideLoadingPage(id);
+			}, window, document);
+		</script>
+	</head>
+	<body>
+		<div class="main">
+			<ul class="table">
+				<li>
+					<label for="url"><span id="lang.url"></span></label>
+					<input type="text" id="url" name="url" value="http://" maxlength="255" style="width:90%;" />
+				</li>
+				<li>
+					<label for="width"><span id="lang.width"></span></label>&nbsp;
+					<input type="text" id="width" name="width" value="550" maxlength="4" style="width:50px;text-align:right;" /> px
+				</li>
+				<li>
+					<label for="height"><span id="lang.height"></span></label>&nbsp;
+					<input type="text" id="height" name="height" value="400" maxlength="4" style="width:50px;text-align:right;" /> px
+				</li>
+				<li>
+					<label for="autostart"><span id="lang.autostart"></span></label>&nbsp;
+					<input type="checkbox" id="autostart" name="autostart" value="1" />
+				</li>
+			</ul>
+		</div>
+	</body>
 </html>
