--- a/test/format.html
+++ b/test/format.html
@@ -5,7 +5,7 @@
 		<title>KE.format Test</title>
 		<link type="text/css" rel="stylesheet" href="qunit/qunit.css" />
 		<script type="text/javascript" charset="utf-8" src="qunit/qunit.js"></script>
-		<script type="text/javascript" charset="utf-8" src="../kindeditor.js"></script>
+		<script type="text/javascript" charset="utf-8" src="../src/core.js"></script>
 		<script type="text/javascript" charset="utf-8" src="format.js"></script>
 	</head>
 	<body>
