--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -7,6 +7,9 @@
 			form {
 				margin: 0;
 			}
+			textarea {
+				display: block;
+			}
 		</style>
 		<script charset="utf-8" src="../kindeditor.js"></script>
 		<script>
@@ -29,19 +32,32 @@
 	<body>
 		<h3>默认模式</h3>
 		<form name="example" method="post" action="../php/demo.php">
-			<textarea id="content1" name="content1" style="width:700px;height:200px;visibility:hidden;">
+			<textarea id="content1" name="content1" style="width:700px;height:300px;visibility:hidden;">
 <p>
-<img border="0" alt="" align="left" src="http://kindsoft.net/images/logo_180_30.gif" />
+	<img border="0" alt="" src="http://kindsoft.net/images/logo_180_30.gif" />
+</p>
+</p>
 KindEditor是一套开源的HTML可视化编辑器，主要用于让用户在网站上获得所见即所得编辑效果，兼容IE、Firefox、Chrome、Safari、Opera等主流浏览器。<br />
 KindEditor使用JavaScript编写，可以无缝的与Java、.NET、PHP、ASP等程序接合。
 KindEditor非常适合在CMS、商城、论坛、博客、Wiki、电子邮件等互联网应用上使用，2006年7月首次发布2.0以来，KindEditor依靠出色的用户体验和领先的技术不断扩大编辑器市场占有率，目前在国内已经成为最受欢迎的编辑器之一。 
 </p>
+<table width="90%">
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+</table>
 			</textarea>
-			<div style="margin:10px 0;">
-				<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
-				<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
-				<input type="submit" name="button" value="提交内容" /> (提交快捷键: Ctrl + Enter)
-			</div>
+			<br />
+			<input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
+			<input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
+			<input type="submit" name="button" value="提交内容" /> (提交快捷键: Ctrl + Enter)
 		</form>
 	</body>
 </html>
