--- a/examples/demo-04.html
+++ b/examples/demo-04.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content4',
-        wyswygMode : false
-    });
-  </script>
-</head>
-<body>
-  <h3>默认模式为代码模式、没有指定CSS</h3>
-  <div class="editor">
-    <textarea id="content4" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style type="text/css" rel="stylesheet">
+			form {
+				margin: 0;
+			}
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script type="text/javascript">
+			KE.show({
+				id : 'content4',
+				wyswygMode : false
+			});
+		</script>
+	</head>
+	<body>
+		<h3>默认模式为代码模式、没有指定CSS</h3>
+		<textarea id="content4" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
+	</body>
 </html>
