--- a/examples/demo-08.html
+++ b/examples/demo-08.html
@@ -1,39 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content1',
-        cssPath : './index.css',
-		newlineTag : 'br' //默认模式
-    });
-	KE.show({
-        id : 'content2',
-        cssPath : './index.css',
-		newlineTag : 'p'
-    });
-  </script>
-</head>
-<body>
-  <h3>回车BR换行</h3>
-  <div class="editor">
-    <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-  </div>
-  <h3>回车P换行</h3>
-  <div class="editor">
-    <textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content1',
+				newlineTag : 'br'
+			});
+			KE.show({
+				id : 'content2',
+				newlineTag : 'p'
+			});
+		</script>
+	</head>
+	<body>
+		<h3>回车BR换行</h3>
+		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
+		<h3>回车P换行</h3>
+		<textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
+	</body>
 </html>
