--- a/examples/demo-09.html
+++ b/examples/demo-09.html
@@ -1,39 +1,36 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content1',
-        skinType: 'tinymce',
-        cssPath : './index.css',
-        items : [
-            'source', '|', 'fullscreen', 'print', 'undo', 'redo', 'cut', 'copy', 'paste',
-            'plainpaste', 'wordpaste', '|', 'justifyleft', 'justifycenter', 'justifyright',
-            'justifyfull', 'insertorderedlist', 'insertunorderedlist', 'indent', 'outdent', 'subscript',
-            'superscript', '|', 'emoticons', 'link', 'unlink', '-',
-            'title', 'fontname', 'fontsize', '|', 'textcolor', 'bgcolor', 'bold',
-            'italic', 'underline', 'strikethrough', 'removeformat', 'selectall', '|', 'image',
-            'flash', 'media', 'table', 'hr', '|', 'about'
-        ]
-    });
-  </script>
-</head>
-<body>
-  <h3>TinyMCE风格</h3>
-  <div class="editor">
-    <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			form {
+				margin: 0;
+			}
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content1',
+				autoSetDataMode: false,
+				allowPreviewEmoticons : false,
+				afterCreate : function(id) {
+					KE.event.add(KE.$('example'), 'submit', function() {
+						KE.util.setData(id);
+					});
+				}
+			});
+		</script>
+	</head>
+	<body>
+		<h3>最佳性能模式</h3>
+		<form id="example" name="example" method="post" action="../php/demo.php">
+			<textarea id="content1" name="content1" style="width:700px;height:200px;visibility:hidden;"></textarea>
+			<br />
+			<input type="submit" name="button" value="提交内容" />
+		</form>
+	</body>
 </html>
