--- a/examples/demo-11.html
+++ b/examples/demo-11.html
@@ -1,38 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta charset="utf-8" />
 		<title>KindEditor</title>
-		<style type="text/css" rel="stylesheet">
-			form {
-				margin: 0;
-			}
-			.editor {
-				margin-top: 5px;
-				margin-bottom: 5px;
+		<style>
+			textarea {
+				display: block;
 			}
 			#word_count {
 				font-weight: bold;
 			}
 		</style>
-		<script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-		<script type="text/javascript">
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
 			KE.show({
 				id : 'content11',
-				cssPath : './index.css',
-				afterCreate : function(id) {
-					KE.onchange(id, function(id) {
-						KE.$('word_count').innerHTML = KE.util.getData(id).length;
-					});
+				afterSetData : function(id) {
+					KE.$('word_count').innerHTML = KE.$('content11').value.length;
 				}
 			});
 		</script>
 	</head>
 	<body>
 		<h3>统计字数</h3>
-		<div class="editor">
-			<textarea id="content11" name="content" cols="100" rows="20"></textarea>
-		</div>
+		<textarea id="content11" name="content" cols="100" rows="20"></textarea>
+		<br />
 		您当前输入了 <span id="word_count">0</span> 个文字。（字数统计包含HTML代码。）
 	</body>
 </html>
