--- a/examples/demo-12.html
+++ b/examples/demo-12.html
@@ -1,30 +1,32 @@
+<!doctype html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>KindEditor</title>
-        <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-        <script type="text/javascript">
-            var editor_id = 'demo_12_id';
-            //初始化编辑器
-            KE.init({
-                id : editor_id,
-                width : '700px',
-                height : '300px'
-            });
-            //创建编辑器，必须在DOM加载完成后执行
-            KE.event.ready(function(){
-                //创建TEXTAREA输入框
-                var textarea = document.createElement('textarea');
-                textarea.id = editor_id;
-                textarea.name = "content";
-                document.getElementById('editor_area').appendChild(textarea);
-                //创建编辑器
-                KE.create(editor_id);
-            });
-        </script>
-    </head>
-    <body>
-        <h3>JavaScript动态创建编辑器</h3>
-        <div id="editor_area"></div>
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			var editor_id = 'demo_12_id';
+			KE.init({
+				id : editor_id,
+				width : '700px',
+				height : '300px'
+			});
+			KE.event.ready(function(){
+				var textarea = document.createElement('textarea');
+				textarea.id = editor_id;
+				textarea.name = "content";
+				document.getElementById('editor_area').appendChild(textarea);
+				KE.create(editor_id);
+			});
+		</script>
+	</head>
+	<body>
+		<h3>JavaScript动态创建编辑器</h3>
+		<div id="editor_area"></div>
+	</body>
 </html>
