--- a/examples/demo-14.html
+++ b/examples/demo-14.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor</title>
-    <style type="text/css" rel="stylesheet">
-      .editor {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      }
-    </style>
-    <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-    <script type="text/javascript">
-      KE.show({
-          id : 'content1',
-          cssPath : './index.css'
-      });
-      function clearEditor(id) {
-          KE.util.setFullHtml(id, '');
-      }
-      function insertHtml(id, html) {
-          KE.util.focus(id);
-          KE.util.selection(id);
-          KE.util.insertHtml(id, html);
-      }
-    </script>
-  </head>
-  <body>
-    <h3>清空内容,插入内容</h3>
-    <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content1'
+			});
+			function clearEditor(id) {
+				KE.util.setFullHtml(id, '');
+			}
+			function insertHtml(id, html) {
+				KE.util.focus(id);
+				KE.util.selection(id);
+				KE.util.insertHtml(id, html);
+			}
+		</script>
+	</head>
+	<body>
+		<h3>清空内容,插入内容</h3>
+		<textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
 <strong>月下独酌</strong> - 李白<br />
 花间一壶酒，独酌无相亲。<br />
 举杯邀明月，对影成三人。<br />
@@ -37,9 +34,9 @@
 我歌月徘徊，我舞影零乱。<br />
 醒时同交欢，醉后各分散。<br />
 永结无情游，相期邈云汉。<br />
-      </textarea>
-    </div>
-    <input type="button" name="button" value="清空内容" onclick="javascript:clearEditor('content1');" />
-    <input type="button" name="button" value="插入HTML内容" onclick="javascript:insertHtml('content1', '<strong>测试内容</strong>');" />
-  </body>
+</textarea>
+		<br />
+		<input type="button" name="button" value="清空内容" onclick="javascript:clearEditor('content1');" />
+		<input type="button" name="button" value="插入HTML内容" onclick="javascript:insertHtml('content1', '<strong>测试内容</strong>');" />
+	</body>
 </html>
