--- a/examples/demo-17.html
+++ b/examples/demo-17.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor</title>
-    <style type="text/css" rel="stylesheet">
-      .editor {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      }
-      .ke-icon-hello {
-      background-image: url(./../skins/default/default.gif);
-      background-position: 0px -672px;
-      width: 16px;
-      height: 16px;
-      }
-    </style>
-    <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-    <script type="text/javascript">
-KE.lang['hello'] = "您好";
-KE.plugin['hello'] = {
-    click : function(id) {
-        alert("您好");
-    }
-};
-KE.show({
-    id : 'content1',
-    cssPath : './index.css',
-    items : ['hello']
-});
-    </script>
-  </head>
-  <body>
-    <h3>自定义插件 - 您好</h3>
-    <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
-    </div>
-  </body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+			.ke-icon-hello {
+				background-image: url(../skins/default/default.gif);
+				background-position: 0px -672px;
+				width: 16px;
+				height: 16px;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.lang['hello'] = "您好";
+			KE.plugin['hello'] = {
+				click : function(id) {
+					alert("您好");
+				}
+			};
+			KE.show({
+				id : 'content1',
+				items : ['hello']
+			});
+		</script>
+	</head>
+	<body>
+		<h3>自定义插件 - 您好</h3>
+		<textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
+	</body>
 </html>
