--- a/examples/demo-19.html
+++ b/examples/demo-19.html
@@ -1,61 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content1',
-        urlType : 'relative'
-    });
-    KE.show({
-        id : 'content2',
-        urlType : 'absolute'
-    });
-    KE.show({
-        id : 'content3',
-        urlType : 'domain'
-    });
-  </script>
-</head>
-<body>
-  <h3>相对URL</h3>
-  <div class="editor">
-    <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content1',
+				urlType : 'relative'
+			});
+			KE.show({
+				id : 'content2',
+				urlType : 'absolute'
+			});
+			KE.show({
+				id : 'content3',
+				urlType : 'domain'
+			});
+		</script>
+	</head>
+	<body>
+		<h3>相对URL</h3>
+		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
 内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
-    </textarea>
-  </div>
-  <h3>绝对URL</h3>
-  <div class="editor">
-    <textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;">
+</textarea>
+		<h3>绝对URL</h3>
+		<textarea id="content2" name="content" style="width:700px;height:200px;visibility:hidden;">
 内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
-    </textarea>
-  </div>
-  <h3>绝对URL（包含域名）</h3>
-  <div class="editor">
-    <textarea id="content3" name="content" style="width:700px;height:200px;visibility:hidden;">
+</textarea>
+	<h3>绝对URL（包含域名）</h3>
+	<textarea id="content3" name="content" style="width:700px;height:200px;visibility:hidden;">
 内部连接：<img border="0" src="./../plugins/emoticons/0.gif" /><br />
 外部连接：<img border="0" alt="" src="http://img1.cache.netease.com/img09/logo/logo.gif" /><br />
 内部超级连接：<a href="./demo-19.html" target="_blank">点击这里</a><br />
-
 外部超级连接：<a href="http://www.163.com/" target="_blank">点击这里</a><br />
-    </textarea>
-  </div>
-</body>
+</textarea>
+	</body>
 </html>
