--- a/examples/demo-20.html
+++ b/examples/demo-20.html
@@ -1,30 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor</title>
-  <style type="text/css" rel="stylesheet">
-    form {
-    margin: 0;
-    }
-    .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    }
-  </style>
-  <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
-  <script type="text/javascript">
-    KE.show({
-        id : 'content1',
-		beforeCreate : function() { alert('开始创建编辑器。'); },
-		afterCreate : function() { alert('编辑器创建成功。'); }
-    });
-  </script>
-</head>
-<body>
-  <h3>设置回调函数</h3>
-  <div class="editor">
-    <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
-  </div>
-</body>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>KindEditor</title>
+		<style>
+			textarea {
+				display: block;
+			}
+		</style>
+		<script charset="utf-8" src="../kindeditor.js"></script>
+		<script>
+			KE.show({
+				id : 'content1',
+				beforeCreate : function(id) { alert('开始创建编辑器。id:' + id); },
+				afterCreate : function(id) { alert('编辑器创建成功。id:' + id); },
+				afterDialogCreate : function(id) { alert('对话框创建成功。id:' + id); }
+			});
+		</script>
+	</head>
+	<body>
+		<h3>设置回调函数</h3>
+		<textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;"></textarea>
+	</body>
 </html>
